<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Login">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_login_username"
        android:layout_width="300dp"
        android:layout_height="65dp"
        android:layout_marginTop="24dp"
        app:boxStrokeColor="@color/black"
        app:boxStrokeWidthFocused="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <EditText
            android:id="@+id/et_username"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:ems="10"
            android:hint="@string/et_username"
            android:inputType="text"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_login_password"
        android:layout_width="300dp"
        android:layout_height="65dp"
        android:layout_marginTop="20dp"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_login_username">

        <EditText
            android:id="@+id/et_password"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:ems="10"
            android:hint="@string/et_password"
            android:inputType="textPassword"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:backgroundTint="@color/blue"
        android:onClick="login"
        android:text="@string/iniciar_sesion"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_login_password" />

    <TextView
        android:id="@+id/tv_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginBottom="148dp"
        android:text="¿No tienes cuenta?"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_signin"
        app:layout_constraintVertical_bias="0.506" />

    <TextView
        android:id="@+id/tv_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginBottom="148dp"
        android:onClick="redirectRegister"
        android:text="Registrate"
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.101"
        app:layout_constraintStart_toEndOf="@+id/tv_question"
        app:layout_constraintTop_toBottomOf="@+id/btn_signin"
        app:layout_constraintVertical_bias="0.506" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="164dp"
        android:layout_height="168dp"
        android:layout_marginTop="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/user"/>


</androidx.constraintlayout.widget.ConstraintLayout>